--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -40,13 +40,12 @@
     <Analyzer Include="C:\Users\wobo5\PersonalProject\2022.3.8f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Script\Tile.cs" />
      <Compile Include="Assets\Script\Bank.cs" />
      <Compile Include="Assets\Script\Tower.cs" />
      <Compile Include="Assets\Script\Enemy.cs" />
      <Compile Include="Assets\Script\EnemyHealth.cs" />
-     <Compile Include="Assets\Script\WayPoint.cs" />
      <Compile Include="Assets\Script\TargetLocator.cs" />
-     <Compile Include="Assets\Script\Tile_Fixing...cs" />
      <Compile Include="Assets\Script\Coodinatel_Labeler.cs" />
      <Compile Include="Assets\Script\ObjectPool.cs" />
      <Compile Include="Assets\Script\PathFinder.cs" />
