--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Script\Tile.cs" />
+     <Compile Include="Assets\Scenes\GameMath\GameMath_1.cs" />
      <Compile Include="Assets\Script\Bank.cs" />
      <Compile Include="Assets\Script\Tower.cs" />
      <Compile Include="Assets\Script\Enemy.cs" />
